Fix getLiterals to work correctly with escaping chars and sharps in literals